# Scrivano

./: .README  .gitignore  .prettierignore  IMPLEMENTATION_PLAN.md  README.md  SECURITY_AUDIT.md  claude.md  eslint.config.js  index.html  indicator.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/commands/: pr.md  push.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  release.yml
src/: App.css  App.test.tsx  App.tsx  DevTools.css  DevTools.tsx  Indicator.css  Indicator.tsx  indicator-main.tsx  main.tsx  shortcutUtils.test.ts  shortcutUtils.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  cursor.rs  keychain.rs  lib.rs  main.rs  paste.rs  recording.rs  settings.rs  transcription.rs  window.rs
src/components/: ApiKeyEditor.tsx  CollapsibleSection.tsx
src/test/: setup.ts
